--- a/index.html
+++ b/index.html
@@ -1,34 +1,28 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Startup</title>
-
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
-    <!-- Bootstrap CSS from a CDN. This way you don't have to include the bootstrap file yourself -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
-    <!-- Your own stylesheet -->
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
-    <div class="container d-flex align-items-sm-center h-100  ">
-      <div clas="row">
-
-        <section  class="text-center  col-12  ">
-    <h1 class="text-uppercase"><strong>The biggest startup event of the year</strong></h1>
-       </section>
-       <div class="buffer col-12"></div>
-
-        <section class="text-center col-12  "> <!-- for center  -->
-        <hr>
-    <a href="https://mailchi.mp/25fd3e30b467/hollymolly3"  class="btn btn-primary btn-xl " >Find out more</button></a>
-  </section>
-      </div>
-     </div>
-  </body>
+<head>
+    <title>CSS</title>
+    <link rel="stylesheet" type="text/css" href="Style.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
+</head>
+<body>
+	<header>
+		<nav>
+			<ul>
+				<li>Home</li>
+				<li><a href="about.html">About</a></li>
+				<li><a href="login.html">Login</a></li>
+			</ul>
+		</nav>
+	</header>
+	<section>
+		<h2 >Home</h2>
+		<div id="div1">
+		<p class="webtext1">Lorem ipsum.</p>
+		<p class="webtext">Lorem ipsum.</p>
+		<p class="webtext">Lorem ipsum.</p>
+	</div>
+	</section>
+	<footer> Website made by me</footer>
+</body>
 </html>
