--- a/e19_r.html
+++ b/e19_r.html
@@ -21,7 +21,7 @@
 
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img style="height: 100vh" src="images/gym_background.jpg" class="d-block w-100"  width="100vw" alt="...">
+      <img style="height: 100vh" src="gym_background.jpg" class="d-block w-100"  width="100vw" alt="...">
 
       <div class="carousel-caption">
       	<h1>BELLY BURN</h1>
@@ -33,7 +33,7 @@
 
     </div>
     <div class="carousel-item">
-      <img style="height: 100vh" src="images/gym-3.jpg" class="d-block w-100" alt="...">
+      <img style="height: 100vh" src="gym-3.jpg" class="d-block w-100" alt="...">
 
       <div class="carousel-caption">
       	<h1>CROSSFIT</h1>
@@ -44,7 +44,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img style="height: 100vh" src="images/gym-4.jpg" class="d-block w-100" alt="...">
+      <img style="height: 100vh" src="gym-4.jpg" class="d-block w-100" alt="...">
 
       <div class="carousel-caption">
       	<h1>CARDIO</h1>
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="carousel-item">
-      <img style="height: 100vh" src="images/gym-5.jpg" class="d-block w-100" alt="...">
+      <img style="height: 100vh" src="gym-5.jpg" class="d-block w-100" alt="...">
       
       <div class="carousel-caption">
       	<h1>STRENGHT</h1>
